temporarily disabled settings.

--- a/index.html
+++ b/index.html
@@ -45,14 +45,6 @@
     </div>
     <div id="contextMenu" class="contextMenu">
     </div>
-    <a href="https://monolithservers.com/"><img data-context-type="link"
-        data-context-link="https://monolithservers.com/" class='monomaps-logo-left' id='monolith-logo'
-        src='./assets/monomaps/logos/monolith.png' alt="Monolith Servers Logo"></a>
-    <a href="https://monolithservers.com/forums/threads/interactive-monomaps.37742/#post-224716"><img
-        data-context-type="link"
-        data-context-link="https://monolithservers.com/forums/threads/interactive-monomaps.37742/#post-224716"
-        class='monomaps-logo' id='monomaps-logo' src='./assets/monomaps/logos/MonomapsChristmas.png' width="275"
-        alt="Monomaps Beta Logo"></a>
     <div class='monomaps-maps-maparea' id='monomaps-maps-maparea' data-name="Monomaps" data-context-type="Maparea">
     </div>
     <div class="monomaps-maps-actionContainer" id="monomaps-maps-actionContainer">
@@ -64,7 +56,7 @@
         onclick="listMarkers()"><i class="fa-solid fa-search"></i></a>
       <a href="#" id='monomaps-filter' aria-label="Filter Markers" class="monomaps-maps-action"
         onclick="filterMarkers()"><i class="fa-solid fa-filter-list"></i></a>
-      <a href="/settings" id='monomaps-settings' aria-label="Monomaps Configuration" class="monomaps-maps-action"><i class="fa-solid fa-user-gear"></i></a>
+      <!-- <a href="/settings.html" id='monomaps-settings' aria-label="Monomaps Configuration" class="monomaps-maps-action"><i class="fa-solid fa-user-gear"></i></a> -->
       <!-- <a href="#" id="monomaps-help" aria-label="Get Started Guide" class="monomaps-maps-action" onclick="showHelp(1)"><i class="fa-solid fa-info-circle"></i></a> -->
     </div>
     <div class='monomaps-footer-description' id='monomaps-footer-description'>
