commented out layer selection for Paralake.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="monomaps-maps-actionContainer" id="monomaps-maps-actionContainer">
       <!-- <a href="#" id='monomaps-settings' aria-label="Monolith Events" class="monomaps-maps-action"
       onclick=""><i class="fa-solid fa-calendar-days"></i></a> -->
-      <a href="#" id='monomaps-layers' aria-label="Map Layers" class="monomaps-maps-action"
-        onclick="layerContainer()"><i class="fa-solid fa-layer-group"></i></a>
+      <!-- <a href="#" id='monomaps-layers' aria-label="Map Layers" class="monomaps-maps-action"
+        onclick="layerContainer()"><i class="fa-solid fa-layer-group"></i></a> -->
       <a href="#" id='monomaps-search' aria-label="Search Markers" class="monomaps-maps-action"
         onclick="listMarkers()"><i class="fa-solid fa-search"></i></a>
       <a href="#" id='monomaps-filter' aria-label="Filter Markers" class="monomaps-maps-action"
